src/main/webapp/assets/styles/components/bsp-article.less
// It's possible that we will move bsp-article out of here to it's own bowerable compoment, so that we can try to
// standardize around it (as it should really be the same for a LOT of projects). That concept is still TBD, so until
// then it will be included in this repo

.bsp-article-wrapper {

}

.bsp-article {
    border-top: @border-style-1;
    padding: @space-triple 0 @space;

    &:first-of-type {
        border-top: none;
        margin-top: -@space-triple;
    }

    .bsp-share-links {
        margin-bottom: @space;
    }

    // when we have a component inside of an article, remove the margin.
    // We let natural margins of p tags and others in the contentdo the spacing instead
    .bsp-component {
        margin: 0;
    }

}

.bsp-article-content {
    &:extend(.clearfix all);

    p {
        margin: 0 0 @space-double 0;
    }
}

.bsp-article-enhancement {
    margin: @space 0;

    &.align-left {
        float: left;
        margin: 0 @space @space 0;
    }

    &.align-right {
        float: right;
        margin: 0 0 @space @space;
    }

    &.align-center {
        margin: 0 auto;
    }

    .bsp-img-with-meta {
        width: 1px;

        img {
            max-width: none;
        }
    }

    .related-link {
        display: block;
        font-size: @ts-1;
        font-weight: @font-weight-bold;
        margin: @space-double 0;
    }

}

.bsp-article-lead {
    img {
        max-width: none;
        width: 100%;
    }

    margin-bottom: @space-double;
}

.bsp-article-title {
    &:extend(.bsp-page-title all);
}

.bsp-article-subtitle {
    &:extend(.bsp-section-title all);
}

.bsp-article-list {
    &:extend(.bsp-list all);
}

